app/assets/stylesheets/application.css
/* ... */
html {
	/* environment colors */
	--color-selection-fg: HighlightText;
	--color-selection-bg: Highlight;

	/* derived colors */

	/* These colors are derived from the light or dark palette. This
	   opacity-mixing technique is usually inappropriate for backgrounds and
	   borders, so other colors are given explicitly per display mode. */

	/* main monochrome and variants */
	--color-bg: rgb(var(--palette-bg));
	--color-bg-50: rgba(var(--palette-bg), 50%);

	--color-fg: rgba(var(--palette-fg), 80%); /* primary text */
	--color-fg-75: rgba(var(--palette-fg), 75%); /* links in flash banners */
	--color-fg-67: rgba(var(--palette-fg), 67%); /* most text in a box */
	--color-fg-60: rgba(var(--palette-fg), 60%); /* table page links */
	--color-fg-53: rgba(var(--palette-fg), 53%); /* uncolored text links */
	--color-fg-50: rgba(var(--palette-fg), 50%); /* disabled, expired */
	--color-fg-47: rgba(var(--palette-fg), 47%); /* byline */
	--color-fg-40: rgba(var(--palette-fg), 40%); /* footer link */
	--color-fg-33: rgba(var(--palette-fg), 33%); /* faint text */
	--color-fg-gradient-lit: rgba(var(--palette-fg), var(--opacity-gradient-lit));
	--color-fg-gradient-shadowed: rgba(var(--palette-fg), var(--opacity-gradient-shadowed));

	--color-light-25: rgba(var(--palette-light), 25%);

	--color-shadow-80: rgba(var(--palette-shadow), 80%);
	--color-shadow-25: rgba(var(--palette-shadow), 25%);
	--color-shadow-10: rgba(var(--palette-shadow), 10%);

	/* colored backgrounds and foregrounds and variants */
	--color-bg-accent: rgb(var(--palette-bg-accent));
	--color-bg-target: rgb(var(--palette-bg-target));

	--color-fg-link: rgb(var(--palette-fg-link));
	--color-fg-link-visited: rgba(var(--palette-fg-link), 67%);
	--color-fg-accent: rgb(var(--palette-fg-accent));
	--color-fg-negative: rgb(var(--palette-fg-negative));
	--color-fg-affirmative: rgb(var(--palette-fg-affirmative));
	--color-fg-author: rgb(var(--palette-fg-author));
	--color-fg-shape: rgb(var(--palette-fg-shape));
}

/* generics */

/* force a vertical scrollbar to avoid page-shifting */
html {
	overflow-y: scroll;
}

body, textarea, input, button {
	font-family: "helvetica neue", arial, sans-serif;
	font-size: 10pt;
	color: var(--color-fg);
	line-height: 1.45em;
}

body {
	background-color: var(--color-bg);
}

a {
	color: var(--color-fg-link);
	cursor: pointer;
}

li.story div.details span.link a:visited {
	color: var(--color-fg-link-visited);
}

h1 {
	margin: 0px;
	margin-bottom: 0.75em;
	padding: 0px;
	font-size: 14pt;
	font-weight: bold;
}
h2 {
	font-size: 11pt;
}

.clear {
	clear: both;
}

a.tag {
	background-color: var(--color-tag-bg);
	border: 1px solid var(--color-tag-border);
	border-radius: 5px;
	color: var(--color-fg-67);
	font-size: 8pt;
	margin-left: 0.25em;
	padding: 0px 0.4em 1px 0.4em;
	text-decoration: none;
	vertical-align: text-top;
}

a.tag_is_media {
	background-color: var(--color-tag-media-bg);
	border-color: var(--color-tag-media-border);
	color: var(--color-fg-67);
}

a.tag_meta {
	background-color: var(--color-tag-meta-bg);
	border-color: var(--color-tag-meta-border);
}

span.hat {
	border-bottom: 6px solid var(--color-hat-brim-stroke);
	border-radius: 0px 0px 4px 4px;
	padding: 1px 8px;
	vertical-align: super;
	white-space: nowrap;
}
span.hat span.crown {
	background-color: var(--color-hat-crown-fill);
	border: 1px solid var(--color-hat-crown-stroke);
	border-bottom: 0;
	border-radius: 5px 5px 0px 0px;
	font-size: 8pt;
	padding: 3px 5px 2px 5px;
	text-decoration: none;
	vertical-align: text-top;
}

span.hat span.crown, span.hat a {
	color: var(--color-fg-53);
	text-decoration: none;
}

span.na {
	color: var(--color-fg-50);
	font-style: italic;
}

div.shorten_first_p p:first-child {
	margin-top: 0.5em;
}

pre {
	overflow-x: auto;
}

/* default form styling */

input,
button,
select,
textarea {
	color: var(--color-fg-67);
	background-color: var(--color-box-bg);
	padding: 3px 5px;
}
textarea {
	resize: vertical;
}
input[type="text"],
input[type="search"],
input[type="password"],
input[type="email"],
input[type="number"],
input[type="url"],
textarea {
	border: 1px solid var(--color-box-border);
}
input:focus, textarea:focus {
	outline-style: solid;
	outline-width: 2px;
}
input[type="checkbox"] {
	margin-top: 0.5em;
}
select {
	border: 1px solid var(--color-box-border);
}
input:focus,
textarea:focus {
	border-color: var(--color-box-border-focus);
	color: var(--color-fg);
	outline: 0;
}
textarea::placeholder {
	color: var(--color-fg-33);
}

input[type="submit"]:focus,
button:focus {
	border-color: var(--color-box-border-focus);
	outline: 1px solid var(--color-box-border-focus);
}

/* these must be separate */
::-webkit-input-placeholder {
	color: var(--color-fg-33);
	font-style: italic;
}
:-moz-placeholder {
	color: var(--color-fg-33);
	font-style: italic;
}

button,
input[type="button"],
input[type="reset"],
input[type="submit"],
div.select2-choices,
a.button {
	background-color: var(--color-button-bg);
	border-bottom-color: var(--color-fg-shape);
	border: 1px solid var(--color-box-border);
	color: var(--color-fg-67);
	cursor: pointer;
	display: inline-block;
	line-height: 18px;
	padding: 2px 10px 2px 10px;
	text-align: center;
	text-decoration: none;
}
button:first-child,
input[type="button"]:first-child,
input[type="reset"]:first-child,
input[type="submit"]:first-child {
	margin-left: 0;
}
button:hover,
input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover {
	color: var(--color-fg-67);
	text-decoration: none;
	background-color: var(--color-button-bg-shaded);
}

select {
	margin-top: 3px;
	min-width: 100px;
}
select:focus {
	border-color: var(--color-box-border-focus);
	color: var(--color-fg);
	outline: 0;
}
select::-moz-focus-inner {
	border: 0;
	outline: 0;
}

input:disabled,
textarea:disabled,
button:disabled {
	background-color: var(--color-box-bg-shaded);
	color: var(--color-fg-50);
}
/* ... */

